# qa_guru_17_rest_api

./: .env.example  README.md  pyproject.toml
data/: schema.py  user_data.py
tests/: conftest.py  test_api.py
utils/: api_helper.py
